Fix display and visibility for CAS projects

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -61,13 +61,18 @@
 /* CAS */
 .cas {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+}
+
+.casCards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .cas img {
   width: 30%;
-  height: 400px;
-  object-fit: contain;
+  margin: 10px;
+  object-fit: cover;
 }
